{{$NEXT}}

0.09998   2015-06-10 00:28:12-07:00 America/Los_Angeles

      [THANKS]

      Several of the changes in this release were contributed by Chris Kirke as
      part of the CPAN Pull Request Challenge, organized by Neil Bowers. I am
      sincerely grateful for their efforts.

      [BUG FIXES]

      - The t/, xt/, inc, and local/ directories are always ignored when
        indexing a distribution. This is exactly what PAUSE does.

      - Fixed test failures caused by the presence of a ~/.pause file. GH #172.

      [NEW COMMANDS]

      - The "look" command will unpack a distribution into a temporary directory
      and spawn a subshell in that location.  Contributed by Kal Hodgson.

      [ENHANCMENTS]

      - The "diff" command now has a --format option for more precise control
      of the output. Contributed by Florian Ragwitz.

      - A stale repository lockfile can be stollen if the PINTO_STALE_LOCKFILE_TIMEOUT
      environment variable is set. Contributed by Chris Kirke. GH #209.

      - Operations with the --dry-run option are now allowed on locked stacks.
      Contributed by Chris Kirke. GH #207.

      - Improved error messages when a repository is not in a sane state.
      Contributed by Chris Kirke. GH #199.

      - Improved latency from Pinto::Server by autoflushing the output.

      [PREREQUISITES]

      - Several of the prerequisite modules have been upgraded to newer versions
      to take advantage of recent improvements, and to support Perl 5.22.0. If
      you have installed Pinto as a stand-alone application as described in
      Pinto::Manual::Installing then your environment will be insulated from these
      upgrades.

0.09996   2014-11-04 10:54:11-08:00 America/Los_Angeles

      [MISCELLANEOUS]

      - Upgraded to latest version of Module::CoreList, so we can support
      latest versions of perl.

      - Tests will no longer clobber ~/.cpanm (GH #170). Thanks to Karen
      Etheridge for pointing this out.
