@@ -21,6 +21,7 @@ plan skip_all => "Can't open connection to $t" unless $t->can_connect;
 
 subtest 'User vs Local vs UTC time' => sub {
 
+    $Pinto::Globals::UA->no_proxy("localhost"); # See GH #202
 
     my $remote = Pinto::Remote->new( root => $t->server_url );
     my $archive = make_dist_archive('AUTHOR/DistA-1 = PkgA~1');
